disaster-recovery/logging/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "3"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"elasticsearch","namespace":"logging"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"elasticsearch"}},"template":{"metadata":{"labels":{"app":"elasticsearch"}},"spec":{"containers":[{"env":[{"name":"discovery.type","value":"single-node"},{"name":"ES_JAVA_OPTS","value":"-Xms512m -Xmx512m"},{"name":"xpack.security.enabled","value":"false"}],"image":"elasticsearch:7.17.10","name":"elasticsearch","ports" [...]
    creationTimestamp: "2026-02-26T15:38:06Z"
    generation: 3
    name: elasticsearch
    namespace: logging
    resourceVersion: "197809"
    uid: 907839e5-c0b4-4f75-9447-7a8fdfc8dd56
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: elasticsearch
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: elasticsearch
      spec:
        containers:
        - env:
          - name: discovery.type
            value: single-node
          - name: ES_JAVA_OPTS
            value: -Xms512m -Xmx512m
          - name: xpack.security.enabled
            value: "false"
          image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
          imagePullPolicy: IfNotPresent
          name: elasticsearch
          ports:
          - containerPort: 9200
            protocol: TCP
          - containerPort: 9300
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-02-26T15:38:07Z"
      lastUpdateTime: "2026-02-26T15:38:07Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-02-26T15:38:06Z"
      lastUpdateTime: "2026-02-26T15:43:07Z"
      message: ReplicaSet "elasticsearch-654bcd6c74" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 3
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "3"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"kibana","namespace":"logging"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"kibana"}},"template":{"metadata":{"labels":{"app":"kibana"}},"spec":{"containers":[{"env":[{"name":"ELASTICSEARCH_HOSTS","value":"http://elasticsearch.logging:9200"}],"image":"docker.elastic.co/kibana/kibana:8.11.0","name":"kibana","ports":[{"containerPort":5601}]}]}}}}
    creationTimestamp: "2026-02-26T13:32:47Z"
    generation: 3
    name: kibana
    namespace: logging
    resourceVersion: "197849"
    uid: d5d57ac2-613e-47e7-b153-8d180667efb9
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: kibana
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-02-26T15:43:08Z"
        labels:
          app: kibana
      spec:
        containers:
        - env:
          - name: ELASTICSEARCH_HOSTS
            value: http://elasticsearch.logging:9200
          image: docker.elastic.co/kibana/kibana:8.11.0
          imagePullPolicy: IfNotPresent
          name: kibana
          ports:
          - containerPort: 5601
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-02-26T13:33:52Z"
      lastUpdateTime: "2026-02-26T13:33:52Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-02-26T13:32:47Z"
      lastUpdateTime: "2026-02-26T15:43:10Z"
      message: ReplicaSet "kibana-5f745f969b" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 3
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
